# copasi-dependencies

./: .gitignore  CMakeLists.txt  build_all.bat  build_all_intel.bat  build_all_vs11.bat  build_all_vs11_static.bat  build_all_vs12.bat  build_all_vs12_static.bat  build_all_vs14.bat  build_all_vs14_static.bat  build_all_vs15.bat  build_all_vs15_static.bat  build_all_vs9.bat  createLinux-qt5.sh  createLinux.sh  createOSX-qt5.sh  createOSX.sh  createWindows.bat  createWindowsPackage.bat  createX86_icc_x64_release.bat  createX86_vs11_x64_debug.bat  createX86_vs11_x64_release.bat  createX86_vs11_x86_debug.bat  createX86_vs11_x86_release.bat  createX86_vs12_x64_debug.bat  createX86_vs12_x64_release.bat  createX86_vs12_x86_debug.bat  createX86_vs12_x86_release.bat  createX86_vs14_x64_debug.bat  createX86_vs14_x64_release.bat  createX86_vs14_x86_debug.bat  createX86_vs14_x86_release.bat  createX86_vs15_x64_debug.bat  createX86_vs15_x64_release.bat  createX86_vs15_x86_debug.bat  createX86_vs15_x86_release.bat  create_icc_x64_release.bat  create_icc_x86_release.bat  index.html  ninja_createX86_vs14_x86_debug.bat  (+6 more)
src/: .gitignore  CMakeLists.txt
src/NativeJIT/: CMakeLists.txt
src/NativeJIT/googletest/: CMakeLists.txt
src/archive/: CMakeLists.txt
src/clapack/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  clapack-config.cmake  clapack-targets.cmake  clapack_build.cmake  cmake_install.cmake
src/clapack/BLAS/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/clapack/F2CLIBS/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/clapack/INCLUDE/: clapack.h  f2c.h.cmake
src/clapack/SRC/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  dlasq1.c
src/clapack/TESTING/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/core/: .cvsignore  .gitignore  CMakeLists.txt  LICENSE  ReadMe.txt  SConstruct  core.pro
src/core/SBWBroker/: Broker.cpp  Broker.h  Broker.rc  Broker.rc.cmake  BrokerApplication.cpp  BrokerApplication.h  BrokerDefines.h  BrokerDefines.h.cmake  BrokerInstance.cpp  BrokerInstance.h  BrokerInterface.cpp  BrokerInterface.h  BrokerSessionKey.cpp  BrokerSessionKey.h  CBroker.cpp  CMakeLists.txt  ConnectionThread.cpp  ConnectionThread.h  Host.cpp  Host.h  HostAccessTable.cpp  HostAccessTable.h  Instance.h  InstanceBase.h  InstanceTable.cpp  InstanceTable.h  InstanceThread.cpp  InstanceThread.h  IntegerHashtable.cpp  IntegerHashtable.h  ModuleInstance.cpp  ModuleInstance.h  ModuleRegistry.cpp  ModuleRegistry.h  ModuleRegistryFile.cpp  ModuleRegistryFile.h  ObjectOrientedReceiver.cpp  ObjectOrientedReceiver.h  Properties.cpp  Properties.h  (+21 more)
src/core/SBWCore/: CMakeLists.txt  DataBlockReader.cpp  DataBlockWriter.cpp  DoNothingReceiver.cpp  Doxyfile.cfg  Handler.cpp  ImplDataBlockReader.cpp  ImplDataBlockWriter.cpp  ImplModuleDescriptor.cpp  Method.cpp  MethodImpl.cpp  MethodTable.cpp  Module.cpp  ModuleDescriptor.cpp  ModuleImpl.cpp  RPCInCall.cpp  RPCOutCall.cpp  Receiver.cpp  RuntimeProperties.cpp  SBW.cpp  SBWApplicationException.cpp  SBWBrokerStartException.cpp  SBWC.cpp  SBWCommunicationException.cpp  SBWConfig.cpp  SBWCore.pro  SBWException.cpp  SBWHighLevel.cpp  SBWIncompatibleMethodSignatureException.cpp  SBWIncorrectCategorySyntaxException.cpp  SBWListener.cpp  SBWListenerConsolidator.cpp  SBWListenerForC.cpp  SBWLowLevel.cpp  SBWMethodAmbiguousException.cpp  SBWMethodNotFoundException.cpp  SBWMethodTypeNotBlockTypeException.cpp  SBWModuleDefinitionException.cpp  SBWModuleIdSyntaxException.cpp  SBWModuleNotFoundException.cpp  (+26 more)
src/core/VisualStudio/: SBW-vs2008.rc  SBW-vs2008.sln  SBW-vs2010.sln  SBW.sln  SBWBrokerLight-MD.vcproj  SBWBrokerLight-vs2008-MD.vcproj  SBWBrokerLight-vs2008.rc  SBWBrokerLight-vs2008.vcproj  SBWBrokerLight-vs2010-MD.vcxproj  SBWBrokerLight-vs2010.vcxproj  SBWBrokerLight.rc  SBWBrokerLight.vcproj  SBWCore-static.vcproj  SBWCore-vs2008-static.vcproj  SBWCore-vs2008.vcproj  SBWCore-vs2010-static.vcxproj  SBWCore-vs2010.vcxproj  SBWCore.vcproj  build.bat
src/core/lib/: libxml2.lib  libxml2_a.lib
src/cppunit/: CMakeLists.txt
src/cpu_features/: CMakeLists.txt
src/cpu_features/src/: cpuinfo_x86.c
src/crossguid/: CMakeLists.txt
src/crossguid/cmake/: FindLibuuid.cmake
src/expat/: CMakeLists.txt
src/expat/lib/: expat_external.h
src/libCombine/: CMakeLists.txt
src/libCombine/CMakeModules/: FindLIBSBML.cmake  FindZIPPER.cmake
src/libCombine/src/: CMakeLists.txt
src/libSBML/: CMakeLists.txt  CMakeSettings.json  README-extension.txt  README.txt  arrays-package.cmake  cmake_uninstall.cmake.in  common.cmake  configure  configure.ac  distrib-package.cmake  dyn-package.cmake  fbc-package.cmake  groups-package.cmake  layout-package.cmake  libsbml  multi-package.cmake  pull_request_template.md  qual-package.cmake  render-package.cmake  req-package.cmake  spatial-package.cmake
src/libSBML/CMakeModules/: FindEXPAT.cmake  FindZLIB.cmake
src/libSBML/docs/: README.txt
src/libSBML/examples/: README.txt  arrays-package.cmake  distrib-package.cmake  dyn-package.cmake  groups-package.cmake  layout-package.cmake  multi-package.cmake  render-package.cmake  req-package.cmake  spatial-package.cmake
src/libSBML/src/: CMakeLists.txt  arrays-package.cmake  distrib-package.cmake  dyn-package.cmake  fbc-package.cmake  groups-package.cmake  layout-package.cmake  (+5 more)
src/libSEDML/: CMakeLists.txt
src/libnuml/: CMakeLists.txt  Doxyfile  LICENSE.txt  README.md
src/libuuid/: CMakeLists.txt  uuid.pc
src/libuuid-1.0.3/: gen_uuid.c
src/mml/: CMakeLists.txt  ChooseQtVersion.cmake  mml.pro  qtmmlwidget.cpp  qtmmlwidget.h
src/qcustomplot/: CMakeLists.txt  ChooseQtVersion.cmake  qcustomplot.cpp
src/qwt/: CMakeLists.txt  qwtconfig.pri
src/qwt-6/: CMakeLists.txt  Makefile
src/qwtplot3d-qt4/: CMakeLists.txt  ChooseQtVersion.cmake  dsp.bat  lingua_de.ts  qwtplot3d.pro
src/raptor/: CMakeLists.txt  LICENSE.txt  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac
src/zipper/: CMakeLists.txt
src/zlib/: CMakeLists.txt
(+1738 files in other folders)
