cmake_minimum_required (VERSION 3.10)
project (copasi-dependencies-archive VERSION 1.0.0)

include(GNUInstallDirs)

set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "COPASI DEPENDENCIES contain required static libraries to build COPASI.")
set(CPACK_PACKAGE_NAME "copasi-dependencies")
set(CPACK_PACKAGE_VENDOR "copasi.org")
set(CPACK_PACKAGE_CONTACT "COPASI Support <support@copasi.org>")
set(CPACK_PACKAGE_DIRECTORY ${CMAKE_INSTALL_PREFIX})
set(CPACK_GENERATOR "ZIP")

include(CPack)


file(GLOB_RECURSE ARCHIVE_INCLUDEDIR ${CMAKE_INSTALL_FULL_INCLUDEDIR}/*)
file(GLOB_RECURSE ARCHIVE_LIBDIR ${CMAKE_INSTALL_FULL_LIBDIR}/*)
file(GLOB_RECURSE ARCHIVE_DATAROOTDIR ${CMAKE_INSTALL_FULL_DATAROOTDIR}/*)

install(FILES ${ARCHIVE_INCLUDEDIR} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
install(FILES ${ARCHIVE_LIBDIR} DESTINATION ${CMAKE_INSTALL_LIBDIR})
install(FILES ${ARCHIVE_DATAROOTDIR} DESTINATION ${CMAKE_INSTALL_DATAROOTDIR})
